added some fields and display all the necessary infos from firestore

--- a/src/components/pages/home/About.module.css
+++ b/src/components/pages/home/About.module.css
@@ -31,3 +31,10 @@
 .btnContainer button{
     margin-top: 10px;
 }
+
+select{
+    width: 100%;
+    border: none;
+    font-size:18px;
+    height: 20px;
+}
