--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -2,8 +2,8 @@
     width: 100%;
     padding: 20px 10px;
     box-sizing: border-box;
-    background: #242020;
 }
+
 
 
 .navbar ul {
@@ -15,26 +15,26 @@
     position: relative;
 }
 
-.title {
-    margin-right: auto;
-    font-weight: bold;
-    letter-spacing: 1px;
-    font-size: 1.2em;
+.navbar li {
+    margin: 30px 20px;
+    cursor: pointer;
+    font-size: 22px;
 }
 
-.navbar button,
-.navbar a {
-    margin-left: 16px;
-}
-
-.navbar a {
-    color: #F05454;
+.navbar li a {
     text-decoration: none;
+    color:black;
+}
+.navbar li:hover {
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: rgb(100, 96, 96);
+    color: rgb(100, 96, 96);
+
 }
 
-li {
-    color: #F05454;
-}
+
+
 
 .logout {
     position: absolute;
@@ -45,9 +45,7 @@ li {
     background: none;
     padding: 6px 12px;
     border: none;
-    color: #F05454;
     font-weight: bold;
     cursor: pointer;
     font-size: 1em;
 }
-
