--- a/src/components/pages/home/Portfolio.module.css
+++ b/src/components/pages/home/Portfolio.module.css
@@ -116,7 +116,7 @@ section {
   display: flex;
   justify-content: center;
   gap: 5rem;
-  height: 80vh;
+  min-height: 82vh;
 }
 
 .sectionPicContainer {
@@ -126,7 +126,7 @@ section {
   margin: auto 0;
 }
 
-.sectionPicContainer img{
+.sectionPicContainer img {
   border-radius: 50%;
   height: 400px;
   width: 400px;
@@ -179,7 +179,7 @@ section {
   gap: 1rem;
 }
 
-.btn {
+.btnContainer button {
   font-weight: 600;
   transition: all 300ms ease;
   padding: 1rem;
@@ -217,4 +217,254 @@ section {
 
 .btn-container {
   gap: 1rem;
+}
+
+
+
+/* --------------------------------------------------------------------------- */
+.about {
+  position: relative;
+  padding: 40px;
+  min-height: 100vh;
+}
+
+.educations {
+  display: flex;
+  align-items: center;
+  max-height: 850px;
+  height: 350px;
+  margin-top: 5rem;
+}
+
+.education {
+  text-align: center;
+  border: 1px solid rgb(163, 163, 163);
+  flex: 1;
+  border-radius: 1rem;
+  height: 300px;
+  margin: 0 20px;
+  align-content: baseline;
+  padding: 30px 10px 0 10px;
+}
+
+.level {
+  font-size: 16px;
+}
+
+.course {
+  font-size: 14px;
+}
+
+.year {
+  font-size: 12px;
+}
+
+.introduction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.introduction div {
+  /* margin: 0 15px; */
+}
+
+.rightDescription {
+  height: auto;
+  padding: 20px;
+  text-align: justify;
+  border-top: 1px solid rgb(163, 163, 163);
+  border-bottom: 1px solid rgb(163, 163, 163);
+  border-right: 1px solid rgb(163, 163, 163);
+}
+
+.leftProfile img {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+}
+
+
+/* -------------------------------------------------- */
+
+.projects::-webkit-scrollbar {
+  display: none;
+}
+
+.projects {
+  position: relative;
+  min-height: 100vh;
+}
+
+
+.projectList {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-wrap: wrap;
+  width: 100%;
+  overflow-x: auto;
+}
+
+.projectMarginized:first-child {
+  margin-left: 800px;
+}
+
+.projectMarginized,
+.project {
+  max-width: 320px;
+  width: 100%;
+  margin: 20px 30px;
+  border: 1px solid black;
+  border-radius: 30px;
+  padding: 20px;
+}
+
+.projectTitle {
+  text-align: center;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.projectDescription {
+  margin: 20px 0;
+  text-align: center;
+  overflow: auto;
+  height: 120px;
+}
+
+.projectButtons {
+  display: flex;
+  justify-content: center;
+}
+
+.projectButtons button {
+  display: block;
+  margin: 0 5px;
+  background: transparent;
+  border: 1px solid rgb(163, 163, 163);
+  padding: 15px;
+  font-size: 16px;
+  border-radius: 10px;
+}
+
+.projectButtons button:hover {
+  background: rgba(0, 0, 0, .9);
+  color: white;
+}
+
+
+.imageContainer {
+  height: 320px;
+  width: 320px;
+}
+
+.imageContainer img {
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+}
+
+
+/* ------------------------------------------------------------------------- */
+
+.skills {
+  min-height: 100vh;
+}
+
+
+.skillsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill {
+  width: 30%;
+  text-align: center;
+  border: 1px solid black;
+  margin: 25px 15px;
+}
+
+.skill img {
+  height: 25px;
+  width: 25px;
+}
+
+.col2 {
+  display: flex;
+  width: auto;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-left: 30px;
+}
+
+article {
+  width: 50%;
+  display: flex;
+  text-align: left;
+  margin-top: 20px;
+}
+
+/* ------------------------------------------------------- */
+.contact {
+  height: 88vh;
+  padding-top: 30px;
+  position: relative;
+}
+
+.contactContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  width: fit-content;
+  max-height:100px ;
+  height: 80px;
+  margin: 20px auto;
+  border: 1px solid black;
+  border-radius: 50px;
+  padding:10px;
+}
+
+.twoColumn {
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  margin:0 10px;
+
+}
+
+.twoColumn img {
+  height: 45px;
+  width: 45px;
+  display: block;
+}
+
+.twoColumn p{
+  margin-left:5px;
+}
+
+.twoColumn a {
+  text-decoration: none;
+  color: black;
+  transition: text-decoration 5s;
+  font-size: 20px;
+}
+
+.twoColumn a:hover {
+  text-decoration: underline;
+  text-underline-offset: 15px;
+  text-decoration-color: rgb(100, 96, 96);
+  color: rgb(100, 96, 96);
+}
+
+.navbarSection{
+  position: absolute;
+  bottom: 33%;
+  right: 31%;
 }
