--- a/src/components/pages/home/Portfolio.module.css
+++ b/src/components/pages/home/Portfolio.module.css
@@ -1,7 +1,7 @@
 /* animation */
 @keyframes glitch {
   0% {
-    opacity: .3;
+    opacity: 0.3;
   }
 
   7% {
@@ -37,7 +37,7 @@
   }
 
   72% {
-    opacity: .4;
+    opacity: 0.4;
   }
 
   75% {
@@ -53,7 +53,6 @@
     opacity: 1;
   }
 }
-
 
 /* animation */
 /* 
@@ -94,9 +93,6 @@ section {
     animation: glitch 2.5s infinite;
 } */
 
-
-
-
 /* 
 
 .imgProfile img {
@@ -105,11 +101,6 @@ section {
   border-radius: 50%;
 }
  */
-
-
-
-
-
 
 /* ------------------------------------------------------------ */
 .profile {
@@ -161,7 +152,6 @@ section {
   margin-top: 1rem;
   gap: 1rem;
 }
-
 
 /* --------------------------------------------- */
 /* ICONS */
@@ -218,8 +208,6 @@ section {
 .btn-container {
   gap: 1rem;
 }
-
-
 
 /* --------------------------------------------------------------------------- */
 .about {
@@ -286,7 +274,6 @@ section {
   border-radius: 50%;
 }
 
-
 /* -------------------------------------------------- */
 
 .projects::-webkit-scrollbar {
@@ -294,32 +281,25 @@ section {
 }
 
 .projects {
-  position: relative;
   min-height: 100vh;
+  width: 100%;
 }
-
 
 .projectList {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  text-wrap: wrap;
+  justify-content: space-around;
   width: 100%;
-  overflow-x: auto;
+  flex-wrap: wrap;
 }
 
-.projectMarginized:first-child {
-  margin-left: 300px;
+.projectMarginized {
+  width: 23%;
+  box-sizing: border-box; 
+  margin-bottom: 15px;
 }
-
-.projectMarginized,
-.project {
-  max-width: 320px;
-  width: 100%;
-  margin: 20px 30px;
-  border: 1px solid black;
-  border-radius: 30px;
-  padding: 20px;
+.projectMarginized .imageContainer{
+  display: block;
+  margin: 0 auto;
 }
 
 .projectTitle {
@@ -351,14 +331,13 @@ section {
 }
 
 .projectButtons button:hover {
-  background: rgba(0, 0, 0, .9);
+  background: rgba(0, 0, 0, 0.9);
   color: white;
 }
 
-
 .imageContainer {
-  height: 320px;
-  width: 320px;
+  height: 250px;
+  max-width: 280px;
 }
 
 .imageContainer img {
@@ -367,13 +346,11 @@ section {
   border-radius: 20px;
 }
 
-
 /* ------------------------------------------------------------------------- */
 
 .skills {
   min-height: 100vh;
 }
-
 
 .skillsContainer {
   display: flex;
@@ -416,18 +393,19 @@ article {
   position: relative;
 }
 
+
 .contactContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid red;
   width: fit-content;
-  max-height:100px ;
+  max-height: 100px;
   height: 80px;
   margin: 20px auto;
   border: 1px solid black;
   border-radius: 50px;
-  padding:10px;
+  padding: 10px;
 }
 
 .twoColumn {
@@ -436,8 +414,7 @@ article {
   justify-content: center;
   align-items: center;
   height: auto;
-  margin:0 10px;
-
+  margin: 0 10px;
 }
 
 .twoColumn img {
@@ -446,8 +423,8 @@ article {
   display: block;
 }
 
-.twoColumn p{
-  margin-left:5px;
+.twoColumn p {
+  margin-left: 5px;
 }
 
 .twoColumn a {
@@ -463,4 +440,3 @@ article {
   text-decoration-color: rgb(100, 96, 96);
   color: rgb(100, 96, 96);
 }
-
